--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
   <head>
     <meta charset="UFT-8" />
     <link rel="stylesheet" href="style.css" />
-    <title>CARAVAN</title>
+    <title>4章演習</title>
   </head>
 
   <body>
     <div class="header">
-      <div class="header-top"></div>
-      <div class="header-bottom"></div>
     </div>
 
     <div class="main-visual">
-      <div class="main-visual-content"></div>
     </div>
 
     <div class="main">
+      <div class="sidebar-left"></div>
       <div class="blog"></div>
-      <div class="sidebar"></div>
+      <div class="sidebar-right"></div>
     </div>
 
     <div class="footer"></div>
